--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Wrapper around the Google Civic Information REST API for GraphQL",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql",
+    "start": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql"
   },
   "repository": {
     "type": "git",
