--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:development": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql",
+    "tsc": "tsc",
     "start": "tsc && node dist/server.js"
   },
   "repository": {
