--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,25 +1,39 @@
+# Docker
+# Build and push an image to Azure Container Registry
+# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+
 trigger:
 - master
 
-pool:
-  vmImage: 'Ubuntu-18.04'
+resources:
+- repo: self
 
 variables:
-  imageName: 'civic-information-api-graphql-wrapper'
+  # Container registry service connection established during pipeline creation
+  dockerRegistryServiceConnection: '835fc8de-47db-4a69-8220-8016f3f7133d'
+  imageRepository: 'caelinsutchcivicinformationapigraphqlwrapper'
+  containerRegistry: 'blmprojects.azurecr.io'
+  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
+  tag: '$(Build.BuildId)'
+  
+  # Agent VM image name
+  vmImageName: 'ubuntu-latest'
 
-steps:
-- task: Docker@2
-  displayName: Build an image
-  inputs:
-    repository: $(imageName)
-    command: build
-    Dockerfile: app/Dockerfile
-- task: Docker@2
-  displayName: Push image
-  inputs:
-    containerRegistry: blmprojects.azurecr.io
-    repository: $(imageName)
-    command: push
-    tags: |
-      test1
-      test2
+stages:
+- stage: Build
+  displayName: Build and push stage
+  jobs:  
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: $(vmImageName)
+    steps:
+    - task: Docker@2
+      displayName: Build and push an image to container registry
+      inputs:
+        command: buildAndPush
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          $(tag)
